# loggers-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.githooks/: pre-commit
crates/slog/: Cargo.toml
crates/slog-example/: Cargo.toml  README.md
crates/slog-example/examples/: standard.rs
crates/slog-example/src/: lib.rs  logfacade.rs
crates/tracing/: Cargo.toml
crates/tracing-example/: Cargo.toml  README.md
crates/tracing-example/examples/: standard.rs
crates/tracing-example/src/: lib.rs  logfacade.rs
src/: main.rs
