[package]
name = "loggers-rs"
version = "0.0.2"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Example usage of popular loggers in Rust"
readme = "README.md"
homepage = "https://github.com/phR0ze/loggers-rs"
repository = "https://github.com/phR0ze/loggers-rs"
exclude = [
	"examples",
	"tests",
	"benches"
]

[profile.release]
lto = true

[workspace]

[dependencies.tracing-example]
path = "crates/tracing-example"

[dependencies.slog-example]
path = "crates/slog-example"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
chrono = "0.4"

[[example]]
name = "tracing-standard"
path = "crates/tracing-example/examples/standard.rs"