[package]
name = "slog-example"
version = "0.0.1"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Library to test out the logging package tracing"
homepage = "https://github.com/phR0ze/logging-rs/crates/slog-example"
repository = "https://github.com/phR0ze/logging-rs/crates/slog-example"

[dependencies]
log = "0.4"
slog = "2.5"
slog-term = "2.6"