[package]
name = "tracing-example"
version = "0.0.1"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Library to test out the logging package tracing"
homepage = "https://github.com/phR0ze/logging-rs/crates/tracing-example"
repository = "https://github.com/phR0ze/logging-rs/crates/tracing-example"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"